--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,6 +87,11 @@ a .linkedIn{
   transition: 1s;
 }
 
+.nav-link,
+.navbar-brand{
+  transition: 1s;
+}
+
 a:hover{
   transform: scale(1.1);
   transition: 0.7s;
